--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -7,15 +7,15 @@
                 <span>Main Menu</span>
              </li>
              <li class="submenu active">
-                <a href="#"><i class="fas fa-user-graduate"></i> <span> Dashboard</span></a>
+                <a href="{% url 'hodpage' %}"><span> Dashboard</span></a>
              </li>
              <li class="submenu">
-                <a href="#"><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
+                <a href=""><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
                 <ul>
-                   <li><a href="students.html">Student List</a></li>
-                   <li><a href="student-details.html">Student View</a></li>
+                   <!-- <li><a href="students.html">Student List</a></li> -->
+                   <li><a href="{% url 'addstudent' %}">Student View</a></li>
                    <li><a href="add-student.html">Student Add</a></li>
-                   <li><a href="edit-student.html">Student Edit</a></li>
+                   <!-- <li><a href="edit-student.html">Student Edit</a></li> -->
                 </ul>
              </li>
              <li class="submenu">
