--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static  %}   
    <div class="header">
        <div class="header-left">
-          <a href="index.html" class="logo">
+          <a href="{% url 'hodpage' %}" class="logo">
           <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
           </a>
           <a href="index.html" class="logo logo-small">
@@ -94,12 +94,20 @@
           </li>
           <li class="nav-item dropdown has-arrow">
              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-             <span class="user-img"><img class="rounded-circle" src="{% static 'assets/img/profiles/avatar-01.jpg' %}" width="31" alt="Ryan Taylor"></span>
-             </a>
+            {% if user.profile_pic == "" %}
+             <span class="user-img"><img class="rounded-circle" src="{% static 'assets/default-img/user-default.png' %}" width="31" alt="{{user.first_name}}&nbsp;{{user.last_name}}"></span>
+            {% else %}
+             <span class="user-img"><img class="rounded-circle" src="{{user.profile_pic}}" width="31" alt="{{user.first_name}}&nbsp;{{user.last_name}}"></span>
+            {% endif %} 
+            </a>
              <div class="dropdown-menu">
                 <div class="user-header">
                    <div class="avatar avatar-sm">
-                      <img src="{% static 'assets/img/profiles/avatar-01.jpg' %}" alt="User Image" class="avatar-img rounded-circle">
+                     {% if user.profile_pic == "" %}
+                      <img src="{% static 'assets/default-img/user-default.png' %}" alt="{{user.first_name}}&nbsp;{{user.last_name}}" class="avatar-img rounded-circle">
+                      {% else %}
+                      <img src="{{user.profile_pic}}" alt="User Image" class="avatar-img rounded-circle">
+                      {% endif %}
                    </div>
                    <div class="user-text">
                       <h6>{{user.first_name}}&nbsp;{{user.last_name}}</h6> 
