--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,19 +12,19 @@
              <li class="submenu">
                 <a href=""><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
                 <ul>
-                   <!-- <li><a href="students.html">Student List</a></li> -->
-                   <li><a href="{% url 'addstudent' %}">Student View</a></li>
-                   <li><a href="add-student.html">Student Add</a></li>
-                   <!-- <li><a href="edit-student.html">Student Edit</a></li> -->
+                   <li><a href="{% url 'viewstudent' %}">Student List</a></li>
+                   <!-- <li><a href="#">Student View</a></li> -->
+                   <li><a href="{% url 'addstudent' %}">Student Add</a></li>
+                   <!-- <li><a href="#">Student Edit</a></li> -->
                 </ul>
              </li>
              <li class="submenu">
                 <a href="#"><i class="fas fa-chalkboard-teacher"></i> <span> Teachers</span> <span class="menu-arrow"></span></a>
                 <ul>
-                   <li><a href="teachers.html">Teacher List</a></li>
-                   <li><a href="teacher-details.html">Teacher View</a></li>
-                   <li><a href="add-teacher.html">Teacher Add</a></li>
-                   <li><a href="edit-teacher.html">Teacher Edit</a></li>
+                   <li><a href="#">Teacher List</a></li>
+                   <!-- <li><a href="teacher-details.html">Teacher View</a></li> -->
+                   <li><a href="#">Teacher Add</a></li>
+                   <!-- <li><a href="edit-teacher.html">Teacher Edit</a></li> -->
                 </ul>
              </li>
              <li class="submenu">
