--- a/templates/HOD/edit_student.html
+++ b/templates/HOD/edit_student.html
@@ -1,4 +1,5 @@
 {% extends "main/base.html" %} 
+{% load static %}
 {% block body %}
 <div class="row">
     <div class="col-sm-12">
@@ -9,13 +10,13 @@
                 <div class="row">
                    <div class="col-12">
                       <h5 class="form-title"><span>Edit Student</span></h5>
-                      {% include 'includes/errormessage.html'%}
                    </div>
                    
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>First Name</label>
                          <input type="text" class="form-control" name="first_name" value="{% for student in students%} {{student.admin.first_name}} {% endfor %}">
+                         <input type="text" class="form-control" name="student_id" value="{% for student in students%} {{student.admin.id}} {% endfor %}" hidden>
                       </div>
                    </div>
                    <div class="col-12 col-sm-6">
@@ -46,7 +47,7 @@
                     <div class="form-group">
                        <label>Date of Birth {{student.student_dob}}</label>
                        <div>
-                          <input type="date" class="form-control" name="DOB_student" value="{% for student in students %} {{student.student_dob}} {% endfor %}">
+                          <input type="date" class="form-control" name="student_dob" value="{% for student in students %} {{student.student_dob}} {% endfor %}">
                        </div>
                     </div>
                  </div>
@@ -81,7 +82,7 @@
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>Session Year</label>
-                         <select class="form-control" name="session_year_id">
+                         <select class="form-control" name="session_id">
                             <option>------Session Year-------</option>
                             {% for session in session %}
                             <option value="{{session.id}}">{{session.session_start}} To {{session.session_end}}</option>
@@ -120,7 +121,7 @@
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>Mobile Number</label>
-                         <input type="text" class="form-control" name="student_mobile"  value="{% for student in students%} {{student.student_mobile_no}} {% endfor %}">
+                         <input type="text" class="form-control" name="student_mobile_no"  value="{% for student in students%} {{student.student_mobile_no}} {% endfor %}">
                       </div>
                    </div>
                    
@@ -128,7 +129,7 @@
                     <div class="col-12 col-sm-6">
                         <div class="form-group">
                            <label>* Optional Mobile Number</label>
-                           <input type="text" class="form-control" name="student_optional_mobile" value="{% for student in students%} {{student.student_optional_mobile_no}} {% endfor %}">
+                           <input type="text" class="form-control" name="student_optional_mobile_no" value="{% for student in students%} {{student.student_optional_mobile_no}} {% endfor %}">
                         </div>
                      </div>
                  <!-- <div class="col-12 col-sm-6">
