--- a/templates/HOD/view_student.html
+++ b/templates/HOD/view_student.html
@@ -11,11 +11,13 @@
                 <li class="breadcrumb-item active">Students</li>
              </ul>
           </div>
+          
           <div class="col-auto text-right float-right ml-auto">
              <a href="#" class="btn btn-outline-primary mr-2"><i class="fas fa-download"></i> Download</a>
              <a href="{% url 'addstudent' %}" class="btn btn-primary"><i class="fas fa-plus"></i></a>
           </div>
        </div>
+       {% include 'includes/errormessage.html'%}
     </div>
     <div class="row">
        <div class="col-sm-12">
@@ -67,7 +69,7 @@
                                   <a href="{% url 'editstudent' student.id %}" class="btn btn-sm bg-success-light mr-2">
                                   <i class="fas fa-pen"></i>
                                   </a>
-                                  <a href="#" class="btn btn-sm bg-danger-light">
+                                  <a href="{% url 'deletestudent' student.id %}" class="btn btn-sm bg-danger-light">
                                   <i class="fas fa-trash"></i>
                                   </a>
                                </div>
