--- a/templates/HOD/add_teacher.html
+++ b/templates/HOD/add_teacher.html
@@ -13,26 +13,44 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-body">
-                    <form>
+                    <form method="POST" action="{% url 'addTeacher' %}" act enctype="multipart/form-data">
                         <div class="row">
                             <div class="col-12">
                                 <h5 class="form-title"><span>Basic Details</span></h5>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control">
+                                    <label> First Name</label>
+                                    <input type="text" class="form-control" name="first_name">
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-group">
+                                    <label> Last Name</label>
+                                    <input type="text" class="form-control" name="last_name">
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-group">
+                                    <label> Username</label>
+                                    <input type="text" class="form-control" name="username">
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-group">
+                                    <label> Email</label>
+                                    <input type="email" class="form-control",name="email">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Gender</label>
-                                    <select class="form-control">
+                                    <select class="form-control" name="gender">
+                                        <option>------Select Gender-----</option>
                                         <option>Male</option>
                                         <option>Female</option>
                                         <option>Others</option>
@@ -42,91 +60,38 @@
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Date of Birth</label>
-                                    <input type="date" class="form-control">
+                                    <input type="date" class="form-control" name="dob">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Mobile</label>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="mobile">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Joining Date</label>
-                                    <input type="date" class="form-control">
+                                    <input type="date" class="form-control" name="join_date">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Qualification</label>
-                                    <input class="form-control" type="text">
+                                    <input class="form-control" type="text" name="qualification">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Experience</label>
-                                    <input class="form-control" type="text">
+                                    <input class="form-control" type="text" name="experience">
                                 </div>
-                            </div>
-                            <div class="col-12">
-                                <h5 class="form-title"><span>Login Details</span></h5>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Username</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Email ID</label>
-                                    <input type="email" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Password</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Repeat Password</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <h5 class="form-title"><span>Address</span></h5>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
                                     <label>Address</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>City</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>State</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Zip Code</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <div class="form-group">
-                                    <label>Country</label>
-                                    <input type="text" class="form-control">
+                                    <!-- <input type="text" class="form-control" name="address"> -->
+                                    <textarea name="address" class="form-control" ></textarea>
                                 </div>
                             </div>
                             <div class="col-12">
