--- a/templates/HOD/add_teacher.html
+++ b/templates/HOD/add_teacher.html
@@ -18,10 +18,18 @@
             <div class="card">
                 <div class="card-body">
                     <form method="POST" action="{% url 'addTeacher' %}" act enctype="multipart/form-data">
+                        {% csrf_token %}
                         <div class="row">
+                            {% include 'includes/errormessage.html'%}
                             <div class="col-12">
                                 <h5 class="form-title"><span>Basic Details</span></h5>
                             </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-group">
+                                   <label>Teacher Image</label>
+                                   <input type="file" class="form-control" name="profile_pic">
+                                </div>
+                                </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label> First Name</label>
@@ -42,8 +50,14 @@
                             </div>
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
+                                   <label>Password</label>
+                                   <input type="password" class="form-control" name="password">
+                                </div>
+                                </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-group">
                                     <label> Email</label>
-                                    <input type="email" class="form-control",name="email">
+                                    <input type="email" class="form-control" name="email">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
@@ -60,7 +74,7 @@
                             <div class="col-12 col-sm-6">
                                 <div class="form-group">
                                     <label>Date of Birth</label>
-                                    <input type="date" class="form-control" name="dob">
+                                    <input type="date" class="form-control" name="dob_teacher">
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
