--- a/templates/HOD/home.html
+++ b/templates/HOD/home.html
@@ -21,7 +21,7 @@
                           <i class="fas fa-user-graduate"></i>
                        </div>
                        <div class="db-info">
-                          <h3>50055</h3>
+                          <h3>{{studentcount}}</h3>
                           <h6>Students</h6>
                        </div>
                     </div>
@@ -33,11 +33,11 @@
                  <div class="card-body">
                     <div class="db-widgets d-flex justify-content-between align-items-center">
                        <div class="db-icon">
-                          <i class="fas fa-crown"></i>
+                          <i class="fas fa-chalkboard-teacher"></i>
                        </div>
                        <div class="db-info">
-                          <h3>50+</h3>
-                          <h6>Awards</h6>
+                          <h3>{{staffcount}}</h3>
+                          <h6>Staff</h6>
                        </div>
                     </div>
                  </div>
@@ -48,11 +48,11 @@
                  <div class="card-body">
                     <div class="db-widgets d-flex justify-content-between align-items-center">
                        <div class="db-icon">
-                          <i class="fas fa-building"></i>
+                          <i class="fas fa-book"></i>
                        </div>
                        <div class="db-info">
-                          <h3>30+</h3>
-                          <h6>Department</h6>
+                          <h3>{{subjectcount}}</h3>
+                          <h6>Subject</h6>
                        </div>
                     </div>
                  </div>
@@ -63,11 +63,11 @@
                  <div class="card-body">
                     <div class="db-widgets d-flex justify-content-between align-items-center">
                        <div class="db-icon">
-                          <i class="fas fa-file-invoice-dollar"></i>
+                          <i class="fas fa-graduation-cap"></i>
                        </div>
                        <div class="db-info">
-                          <h3>$505</h3>
-                          <h6>Revenue</h6>
+                          <h3>{{coursecount}}</h3>
+                          <h6>Course</h6>
                        </div>
                     </div>
                  </div>
@@ -80,7 +80,7 @@
                  <div class="card-header">
                     <div class="row align-items-center">
                        <div class="col-6">
-                          <h5 class="card-title">Revenue</h5>
+                          <h5 class="card-title">All Data</h5>
                        </div>
                        <div class="col-6">
                           <ul class="list-inline-group text-right mb-0 pl-0">
@@ -98,7 +98,7 @@
                     </div>
                  </div>
                  <div class="card-body">
-                    <div id="apexcharts-area"></div>
+                    <div id="Alldetails"></div>
                  </div>
               </div>
            </div>
@@ -125,11 +125,67 @@
                     </div>
                  </div>
                  <div class="card-body">
-                    <div id="bar"></div>
+                    <div id="stud_gender"></div>
                  </div>
               </div>
            </div>
         </div>
+        <div class="row">
+         <div class="col-md-12 col-lg-6">
+            <div class="card card-chart">
+               <div class="card-header">
+                  <div class="row align-items-center">
+                     <div class="col-6">
+                        <h5 class="card-title">Student and Staff</h5>
+                     </div>
+                     <div class="col-6">
+                        <ul class="list-inline-group text-right mb-0 pl-0">
+                           <li class="list-inline-item">
+                              <div class="form-group mb-0 amount-spent-select">
+                                 <select class="form-control form-control-sm">
+                                    <option>Today</option>
+                                    <option>Last Week</option>
+                                    <option>Last Month</option>
+                                 </select>
+                              </div>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="card-body">
+                  <div id="student-staff"></div>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-12 col-lg-6">
+            <div class="card card-chart">
+               <div class="card-header">
+                  <div class="row align-items-center">
+                     <div class="col-6">
+                        <h5 class="card-title">Course and Subject</h5>
+                     </div>
+                     <div class="col-6">
+                        <ul class="list-inline-group text-right mb-0 pl-0">
+                           <li class="list-inline-item">
+                              <div class="form-group mb-0 amount-spent-select">
+                                 <select class="form-control form-control-sm">
+                                    <option>Today</option>
+                                    <option>Last Week</option>
+                                    <option>Last Month</option>
+                                 </select>
+                              </div>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="card-body">
+                  <div id="coursesubject"></div>
+               </div>
+            </div>
+         </div>
+      </div>
         <div class="row">
            <div class="col-md-6 d-flex">
               <div class="card flex-fill">
@@ -273,4 +329,8 @@
            </div>
         </div>
      </div>
+
 {% endblock %}
+{% block js %}
+{% include 'includes/chart.html' %}
+{% endblock js %}
