--- a/templates/Staff/apply_leave.html
+++ b/templates/Staff/apply_leave.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="col-sm-11">
                                 <div class="form-group">
-                                    <label>Course Name</label>
+                                    <label>Leave Date</label>
                                     <input type="date" class="form-control" name="leave_date" required>
                                 </div>
                             </div>
